--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -2,47 +2,30 @@
 VERSION=2.6.3
 LIBXML2=$(BUILD_ROOT)/persistence/libxml2
 SRC=$(LIBXML2)/libxml2-$(VERSION)
-OS=$(shell uname)
+
+include $(BUILD_ROOT)/Makefile.inc
 
 ifeq ($(DEBUG),1)
-
 CONF_DBG=--enable-debug
-DIST_DBG=--debug
-PREFIX=$(BUILD_ROOT)/debug
-SNAP=debug
-
 else
-
 CONF_DBG=
-DIST_DBG=
-PREFIX=$(BUILD_ROOT)/release
-SNAP=release
-
 endif
 
 ifeq ($(OS),Darwin)
-
-PYTHON=$(PREFIX)/Library/Frameworks/Python.framework/Versions/Current
-SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
-
+WP=$(PREFIX)/$(FRAMEWORK)
 else
-
-PYTHON=$(PREFIX)
-SITE=lib/python2.3/site-packages
-
+WP=$(PREFIX)
 endif
 
 BUILD=build_$(SNAP)
 
-
-default: all
 
 $(SRC)/$(BUILD)/Makefile: patches
 	patch -Nup0 < patches; echo ok; \
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../configure --prefix=$(PREFIX) \
                      --srcdir=$(SRC) \
-                     --with-python=$(PYTHON) \
+                     --with-python=$(WP) \
                      $(CONF_DBG)
 
 build: $(SRC)/$(BUILD)/Makefile
@@ -59,5 +42,3 @@ snap:
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
-
-all: build
