--- a/external/jabber-py/Makefile
+++ b/external/jabber-py/Makefile
@@ -2,40 +2,11 @@
 VERSION=0.4-0
 JABBERPY=$(BUILD_ROOT)/jabber-py
 SRC=$(JABBERPY)/jabberpy$(VERSION)
-OS=$(shell uname)
 
-ifeq ($(DEBUG),1)
-
-DIST_OPT=--debug
-PREFIX=$(BUILD_ROOT)/debug
-SNAP=debug
-PYTHON=python_d
-
-else
-
-DIST_OPT=
-PREFIX=$(BUILD_ROOT)/release
-SNAP=release
-PYTHON=python
-
-endif
-
-ifeq ($(OS),Darwin)
-
-PYTHON:=$(PREFIX)/Library/Frameworks/Python.framework/Versions/2.3/bin/$(PYTHON)
-SITE=Library/Frameworks/Python.framework/Versions/2.3/lib/python2.3/site-packages
-
-else
-
-PYTHON:=$(PREFIX)/bin/$(PYTHON)
-SITE=lib/python2.3/site-packages
-
-endif
+include $(BUILD_ROOT)/Makefile.inc
 
 BUILD=build_$(SNAP)
 
-
-default: all
 
 apply: patches
 	patch -Nup0 < patches; echo ok
@@ -56,5 +27,3 @@ snap:
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
-
-all: build
