pathan now ported to new build on windows
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2065 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/pathan/Makefile
+++ b/external/persistence/pathan/Makefile
@@ -12,15 +12,50 @@ else
 CONF_DBG=
 endif
 
+ifeq ($(OS),Cygwin)
+
+$(SRC)/Win32Projects/Pathan/Pathan.sln:
+	(cd win32; tar cf - *.sln *.vcproj) | \
+        (cd $(SRC)/Win32Projects/Pathan; tar xvf -)
+
+compile: $(SRC)/Win32Projects/Pathan/Pathan.sln
+	cd $(SRC); \
+        export XERCESCROOT=`cygpath -aw $(XERCESC)`; \
+	devenv.com Win32Projects/Pathan/Pathan.sln \
+                   /project 'PathanDll' /build $(Snap)
+
+install:
+	mkdir -p $(PREFIX)/include/pathan
+	(cd $(SRC)/src/dom3-xpath; \
+         tar cf - `find . -name '*.hpp' -print`) | \
+        (cd $(PREFIX)/include/pathan; tar xvf - )
+	install $(SRC)/src/config/win32/config.h $(PREFIX)/include/pathan
+	(cd $(SRC)/lib; tar -cf - *.dll) | (cd $(PREFIX)/bin; tar xvf - )
+	(cd $(SRC)/lib; tar -cf - *.lib *.exp) | (cd $(PREFIX)/lib; tar xvf - )
+
+build: compile install
+
+clean:
+	cd $(SRC); \
+        export XERCESCROOT=`cygpath -aw $(XERCESC)`; \
+	devenv.com Win32Projects/Pathan/Pathan.sln \
+                   /project 'PathanDll' /clean $(Snap)
+
+snap: 
+	cd $(BUILD_ROOT); \
+        tar -cvzf $(PATHAN)/$(SNAP).tar.gz $(SNAP)/bin/Pathan*.dll
+
+else
+
 BUILD=build_$(SNAP)
 
 
 $(SRC)/$(BUILD)/Makefile.defs:
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
-        ( cd $(SRC); tar -cf - autotools examples src util \
-                               aclocal.m4 configure configure.in \
-                               Makefile Makefile.defs.in Makefile.deps \
-                               Makefile.plat runConfigure ) | tar -xf - ; \
+        (cd $(SRC); tar -cf - autotools examples src util \
+                              aclocal.m4 configure configure.in \
+                              Makefile Makefile.defs.in Makefile.deps \
+                              Makefile.plat runConfigure) | tar -xf - ; \
         XERCESCROOT=$(XERCESC)/$(BUILD) \
 	./runConfigure --prefix=$(PREFIX) $(CONF_DBG)
 
@@ -38,3 +73,6 @@ snap:
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
+
+endif
+
