dbxml now part of new build on windows
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2066 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/dbxml/Makefile
+++ b/external/persistence/dbxml/Makefile
@@ -17,6 +17,50 @@ DIST_DBG=
 
 endif
 
+ifeq ($(OS),Cygwin)
+
+BUILD=build_win32
+
+$(SRC)/$(BUILD)/Berkeley_DB_XML.sln:
+	(cd win32; tar - cf *.sln *.vcproj) | (cd $(SRC)/$(BUILD); tar xvf -)
+
+apply: patches
+	patch -Nup0 < patches; echo ok
+
+build: $(SRC)/$(BUILD)/Berkeley_DB_XML.sln compile install py
+
+compile:
+	cd $(SRC)/$(BUILD); \
+        devenv.com Berkeley_DB_XML.sln /project dbxml /build $(Snap)
+
+install:
+	(cd $(SRC)/$(BUILD)/$(Snap); \
+         tar cf - *.dll) | (cd $(PREFIX)/bin; tar xvf -)
+	(cd $(SRC)/$(BUILD)/$(Snap); \
+         tar cf - *.lib *.exp) | (cd $(PREFIX)/lib; tar xvf -)
+
+py: apply
+	cd $(SRC)/src/python; \
+	$(PYTHON) setup.py --with-berkeleydb=`cygpath -aw $(PREFIX)` \
+                           --with-xerces=`cygpath -aw $(PREFIX)` \
+                           --with-pathan=`cygpath -aw $(PREFIX)` \
+                           build --build-base=$(BUILD) $(DIST_OPT) \
+                           install --force
+
+clean:
+	cd $(SRC)/$(BUILD); \
+        devenv.com Berkeley_DB_XML.sln /project dbxml /clean $(Snap)
+	cd $(SRC)/src/python; rm -rf $(BUILD)
+
+snap:
+	cd $(BUILD_ROOT); \
+        tar -cvzf $(DBXML)/$(SNAP).tar.gz \
+                  $(SNAP)/bin/libdbxml*.dll \
+                  $(SNAP)/$(SITE)/*dbxml*
+
+
+else
+
 BUILD=build_$(SNAP)
 
 
@@ -41,9 +85,6 @@ build: apply
                                  $(DIST_DBG) \
                            install --force
 
-expand: dbxml-$(VERSION).tar.gz
-	tar xvzf dbxml-$(VERSION).tar.gz
-
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(DBXML)/$(SNAP).tar.gz \
@@ -52,3 +93,8 @@ snap:
 
 clean:
 	cd $(SRC); rm -rf $(BUILD); rm -rf src/python/$(BUILD)
+
+endif
+
+expand: dbxml-$(VERSION).tar.gz
+	tar xvzf dbxml-$(VERSION).tar.gz
