libxml2 now part of new build on windows
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2069 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -5,23 +5,61 @@ SRC=$(LIBXML2)/libxml2-$(VERSION)
 
 include $(BUILD_ROOT)/Makefile.inc
 
-ifeq ($(DEBUG),1)
-CONF_DBG=--enable-debug
-else
-CONF_DBG=
-endif
-
 ifeq ($(OS),Darwin)
 WP=$(PREFIX)/$(FRAMEWORK)
 else
 WP=$(PREFIX)
 endif
 
+ifeq ($(OS),Cygwin)
+
+ifeq ($(DEBUG),1)
+CONF_DBG=debug=yes
+else
+CONF_DBG=
+endif
+
+BUILD=win32/$(SNAP)
+
+$(SRC)/$(BUILD)/config.msvc: apply
+	mkdir -p $(SRC)/$(BUILD)
+	cp -p win32/winSetup.py.in $(SRC)/python
+	cd $(SRC)/win32; \
+	cscript //E:JScript configure.js prefix=$(SNAP) $(CONF_DBG) \
+                            python=yes iconv=no iso8859x=yes 
+
+compile: $(SRC)/$(BUILD)/config.msvc
+	cd $(SRC)/win32; MAKEFLAGS=; \
+	nmake -nologo -f Makefile.msvc BUILD_VERSION=$(SNAP) install
+
+py:
+	cd $(SRC)/python; \
+	$(PYTHON) winSetup.py build --build-base=build_$(SNAP) $(DIST_DBG) \
+                              install --force
+
+build: compile py
+
+clean:
+	cd $(SRC)/win32; rm -rf $(SNAP)
+	cd $(SRC)/python; rm -rf build_$(SNAP)
+
+snap: 
+	cd $(BUILD_ROOT); \
+        tar -cvzf $(LIBXML2)/$(SNAP).tar.gz \
+                  $(SNAP)/$(SITE)/libxml2*
+
+else
+
+ifeq ($(DEBUG),1)
+CONF_DBG=--enable-debug
+else
+CONF_DBG=
+endif
+
 BUILD=build_$(SNAP)
 
 
-$(SRC)/$(BUILD)/Makefile: patches
-	patch -Nup0 < patches; echo ok; \
+$(SRC)/$(BUILD)/Makefile: apply
 	cd $(SRC); mkdir -p $(BUILD); cd $(BUILD); \
 	../configure --prefix=$(PREFIX) \
                      --srcdir=$(SRC) \
@@ -31,9 +69,6 @@ $(SRC)/$(BUILD)/Makefile: patches
 build: $(SRC)/$(BUILD)/Makefile
 	cd $(SRC)/$(BUILD); $(MAKE); $(MAKE) install
 
-expand: libxml2-$(VERSION).tar.gz
-	tar xvzf libxml2-$(VERSION).tar.gz
-
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(LIBXML2)/$(SNAP).tar.gz \
@@ -42,3 +77,11 @@ snap:
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
+
+endif
+
+apply: patches
+	patch -Nup0 < patches; echo ok
+
+expand: libxml2-$(VERSION).tar.gz
+	tar xvzf libxml2-$(VERSION).tar.gz
