libxslt now part of new build on windows
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2070 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -30,7 +30,7 @@ $(SRC)/$(BUILD)/config.msvc: apply
 
 compile: $(SRC)/$(BUILD)/config.msvc
 	cd $(SRC)/win32; MAKEFLAGS=; \
-	nmake -nologo -f Makefile.msvc BUILD_VERSION=$(SNAP) install
+	nmake -nologo -f Makefile.msvc BUILD_VERSION=$(SNAP) all install
 
 py:
 	cd $(SRC)/python; \
