--- a/internal/PyLucene/Makefile.dev
+++ b/internal/PyLucene/Makefile.dev
@@ -24,8 +24,8 @@ CXX = $(GCJ_HOME)/bin/g++
 JCC = $(GCJ_HOME)/bin/gcj
 JCCH = $(GCJ_HOME)/bin/gcjh
 
-LUCENE = $(SRCDIR)/lucene
-DB = $(SRCDIR)/../db
+LUCENE = $(SRCDIR)/lucene-$(VERSION)
+DB = $(SRCDIR)/../db/db-$(DBVERSION)
 PYTHON = /Library/Frameworks/Python.framework/Versions/2.3
 
 PYTHON_INC = $(PYTHON)/include/python2.3
