--- a/external/pychecker/Makefile
+++ b/external/pychecker/Makefile
@@ -5,10 +5,14 @@ SRC=$(PYCHECKER)/pychecker-$(VERSION)
 
 include $(BUILD_ROOT)/Makefile.inc
 
+ifeq ($(OS),Cygwin)
+BIN=bin/Scripts
+else
 ifeq ($(OS),Darwin)
 BIN=$(FRAMEWORK)/bin
 else
 BIN=bin
+endif
 endif
 
 BUILD=build_$(SNAP)
@@ -22,23 +26,11 @@ build:
 expand: pychecker-$(VERSION).tar.gz
 	tar xvzf pychecker-$(VERSION).tar.gz
 
-ifeq ($(OS),Cygwin)
-
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(PYCHECKER)/$(SNAP).tar.gz \
                   $(SNAP)/$(SITE)/pychecker \
-                  $(SNAP)/bin/Scripts/pychecker.bat
-
-else
-
-snap: 
-	cd $(BUILD_ROOT); \
-        tar -cvzf $(PYCHECKER)/$(SNAP).tar.gz \
-                  $(SNAP)/$(SITE)/pychecker \
-                  $(SNAP)/$(BIN)/pychecker
-
-endif
+                  $(SNAP)/$(BIN)/pychecker*
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
