new build binaries now even run Chandler on windows
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2078 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/egenix-mx/Makefile
+++ b/external/egenix-mx/Makefile
@@ -22,7 +22,8 @@ expand: egenix-mx-base-$(VERSION).tar.gz
 snap: 
 	cd $(BUILD_ROOT); \
         tar -cvzf $(EGENIX)/$(SNAP).tar.gz \
-                  $(SNAP)/$(SITE)/mx
+                  $(SNAP)/$(SITE)/mx \
+            -X xcludes
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
