fixed bugs introduced during windows port
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2079 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/egenix-mx/Makefile
+++ b/external/egenix-mx/Makefile
@@ -23,7 +23,7 @@ snap:
 	cd $(BUILD_ROOT); \
         tar -cvzf $(EGENIX)/$(SNAP).tar.gz \
                   $(SNAP)/$(SITE)/mx \
-            -X xcludes
+            -X $(EGENIX)/xcludes
 
 clean:
 	cd $(SRC); rm -rf $(BUILD)
