fixed few remaining debug windows bugs
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2099 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/persistence/libxml2/Makefile
+++ b/external/persistence/libxml2/Makefile
@@ -34,7 +34,7 @@ compile: $(SRC)/$(BUILD)/config.msvc
 
 py:
 	cd $(SRC)/python; \
-	$(PYTHON) winSetup.py build --build-base=build_$(SNAP) $(DIST_DBG) \
+	$(PYTHON) winSetup.py build --build-base=build_$(SNAP) $(DIST_OPT) \
                               install --force
 
 build: compile py
