--- a/external/persistence/libxslt/Makefile
+++ b/external/persistence/libxslt/Makefile
@@ -37,7 +37,7 @@ install:
 
 py:
 	cd $(SRC)/python; \
-	$(PYTHON) winSetup.py build --build-base=build_$(SNAP) $(DIST_DBG) \
+	$(PYTHON) winSetup.py build --build-base=build_$(SNAP) $(DIST_OPT) \
                               install --force
 
 build: compile install py
