Fixed a typo in html.py
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2124 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/epydoc/Makefile
+++ b/external/epydoc/Makefile
@@ -8,7 +8,10 @@ include $(BUILD_ROOT)/Makefile.inc
 BUILD=build_$(SNAP)
 
 
-build:
+apply: patches
+	patch -Nup0 < patches; echo ok
+
+build: apply
 	cd $(SRC); \
 	$(PYTHON) setup.py build --build-base=$(BUILD) $(DIST_OPT) \
                            install --force
