expand should depend on env target
git-svn-id: http://svn.osafoundation.org/chandler/trunk@2125 3c49585b-f0f7-0310-b5f9-dfe92a88fbfe

--- a/external/Makefile
+++ b/external/Makefile
@@ -45,7 +45,7 @@ sources:
 sources-$(VERSION).tar:
 	curl http://builds.osafoundation.org/external/sources-$(VERSION).tar > sources-$(VERSION).tar
 
-expand: sources-$(VERSION).tar
+expand: env sources-$(VERSION).tar
 	tar xvf sources-$(VERSION).tar
 	for system in $(SYSTEMS); \
 	do \
